2006-02-07  Frank Ch. Eigler  <fche@elastic.org>

	* src/testsuite/buildok/syscalls.stp: Build with "-u" to build-test
	all auxiliary functions.
	* tapsets.cxx (dwarf_query::add_probe_point): Add some "-vv" output.

2006-02-07  Josh Stone  <joshua.i.stone@intel.com>

	PR 2068
	* tapsets.cxx (dwarf_query::blacklisted_p): add __switch_to
	to the blacklist for x86_64 architecture only.

2006-02-06  Will Cohen  <wcohen@redhat.com>

	* tapset/syscall2.stp: Correct opening comment typo.

2006-02-06  Will Cohen  <wcohen@redhat.com>

	* tapset/syscall2.stp: Correct closing comment typos.

2006-02-01  Frank Ch. Eigler  <fche@elastic.org>

	* testsuite/semko/one.stp: Make sure test case stays broken.

2006-02-01  Martin Hunt  <hunt@redhat.com>

	* stapfuncs.5.in: Document is_return(), returnval() and
	probefunc().
	* testsuite/buildok/syscall.stp: Basic syscall test.
	
2006-02-01  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac, systemtap.spec.in: Version 0.5.4.
	* configure: Regenerated.

2006-01-31  Josh Stone  <joshua.i.stone@intel.com>

	PR 2252
	* translate.cxx (translate_pass): Fix legacy definition of
	read_trylock.

2006-01-30  Frank Ch. Eigler  <fche@elastic.org>

	* main.cxx (main): Also print elapsed real time for each pass. 

2006-01-27  Frank Ch. Eigler  <fche@elastic.org>

	* main.cxx: Make "-v" (verbose) flag a counter.
	* stap.1.in: Document this.
	* session.h: Corresponding changes.
	* {elaborate,buildrun,tapsets,translate}.cxx: Update all uses of
	verbose flag to compare it to sensible level for value of message.

2006-01-27  Frank Ch. Eigler  <fche@elastic.org>

	* main.cxx (main): In verbose mode, print user+sys times after
	each pass.
	* buildrun.cxx (compile_pass): Move success message back to main().
	
2006-01-26  Frank Ch. Eigler  <fche@elastic.org>

	PR 2060: lock elevation, mop-up
	* staptree.cxx (functioncall_traversing_visitor): Store a
	current_function pointer during traversal.